slurm_out/slurm.50219372.eu-g5-038-4.out
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/cluster/home/fconoscenti/Thesis_QSL/ViT_Heisenberg/run_ViT_amp.py", line 407
    L: int   log_psi = jax.vmap(vit)(jnp.stack(spins_sym))
             ^^^^^^^
SyntaxError: invalid syntax
srun: error: eu-g5-038-4: task 0: Exited with exit code 1
